Configured docker build and fixed broken links

--- a/index.html
+++ b/index.html
@@ -15,21 +15,21 @@
             <div id="locations">
                 <div class="apartment-opt">
                     <img class="thumb-img" src="/Home-img/Pilies.jpg" alt="Stikliu-street"/>
-                    <a href="/Gatves/Pilies/Pilies.html">
+                    <a href="/Gatves/Pilies/pilies.html">
                         <div class="street-links animation-hover">PILIES STREET</div>
                     </a>
                     <img class="booking" src="/Home-img/Booking-award.jpg" alt="Booking-award"/>
                 </div>
                 <div class="apartment-opt">
                     <img class="thumb-img" src="/Home-img/Stikliu.jpg" alt="Stikliu-street"/>
-                    <a href="/Gatves/Stikliu/Stikliu.html">
+                    <a href="/Gatves/Stikliu/stikliu.html">
                         <div class="street-links animation-hover">STIKLIŲ STREET</div>
                     </a>
                     <img class="booking" src="/Home-img/Booking-award.jpg" alt="Booking-award"/>
                 </div>
                 <div class="apartment-opt">
                     <img class="thumb-img" src="/Home-img/Vilniaus.jpg" alt="Stikliu-street"/>
-                    <a href="/Gatves/Vilniaus/Vilniaus.html">
+                    <a href="/Gatves/Vilniaus/vilniaus.html">
                         <div class="street-links animation-hover">VILNIUS STREET</div>
                     </a>
                     <img class="booking" src="/Home-img/Booking-award.jpg" alt="Booking-award"/>
