Fixed known issues

--- a/Gatves/Pilies/pilies.html
+++ b/Gatves/Pilies/pilies.html
@@ -19,15 +19,15 @@
                 <div class="Photosphere " id="Pilies-viewer"></div>
             </div>
             
-            <script>
-                 const viewer = new PhotoSphereViewer.Viewer({
-                     navbar:[
-                         'zoom',
-                         'fullscreen',
-                     ],
-                     container: document.querySelector('#Pilies-viewer'),
-                     panorama: "/Home-img/Pilies-img/Flat/Pilies-HDRI.jpg",
-                 });
+            <script defer>
+                const viewer = new PhotoSphereViewer.Viewer({
+                    navbar:[
+                        'zoom',
+                        'fullscreen',
+                    ],
+                    container: document.querySelector('#Pilies-viewer'),
+                    panorama: "/Home-img/Pilies-img/Flat/Pilies-HDRI.jpg",
+                });
             </script>
     
             <div class="gallery">
