--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <body>
         <navbar-component-pc></navbar-component-pc>
         <navbar-component-phone></navbar-component-phone>
-        <div class="main">
+        <div class="bod2">
             <h1 id="Title">Your stay in Vilnius</h1>
             <div id="locations">
                 <div class="apartment-opt">
                     <img class="thumb-img" src="/Home-img/Pilies.jpg" alt="Stikliu-street"/>
-                    <a href="/Gatves/Pilies/pilies.html">
-                        <div class="street-links animation-hover">PILIES STREET</div>
-                    </a>
+                        <a href="/Gatves/Pilies/pilies.html">
+                            <div class="street-links animation-hover">PILIES STREET</div>
+                        </a>
                     <img class="booking" src="/Home-img/Booking-award.jpg" alt="Booking-award"/>
                 </div>
                 <div class="apartment-opt">
