--- a/info.html
+++ b/info.html
@@ -26,13 +26,13 @@
                 </form>
             </div>
             <div id="street-view-container">
-                <iframe class="picture street-view" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+                <iframe class="picture-static street-view" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
                 src="https://www.google.com/maps/embed?pb=!4v1661460408108!6m8!1m7!1sWSFbSuNmi_Q6kDwjm8NJpw!2m2!1d54.6815865405022!2d25.28918250252336!3f77.80364511088466!4f-11.121643148096581!5f0.7820865974627469">
                 </iframe>
-                <iframe class="picture street-view" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade" 
+                <iframe class="picture-static street-view" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade" 
                 src="https://www.google.com/maps/embed?pb=!4v1661456496324!6m8!1m7!1sPfeAJphISHZt_hCNe4iLCQ!2m2!1d54.6803476874727!2d25.28611904627498!3f137.70629101241215!4f-16.62928013088532!5f0.7820865974627469">
                 </iframe>
-                <iframe class="picture street-view" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade" 
+                <iframe class="picture-static street-view" allowfullscreen="true" loading="lazy" referrerpolicy="no-referrer-when-downgrade" 
                 src="https://www.google.com/maps/embed?pb=!4v1661456637512!6m8!1m7!1sILRnAEcnHuMa8byO9kfJXg!2m2!1d54.68523299824259!2d25.27940928364117!3f340.18887502584835!4f-2.8886006903167782!5f0.7820865974627469">
                 </iframe>
             </div>
