Fixed and improved mobile display

--- a/Gatves/Pilies/pilies-explore.html
+++ b/Gatves/Pilies/pilies-explore.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="/Style.css" />
-        <meta charset="utf-8" />
+        <meta charset="utf-8" name="viewport"/>
         <script src="/Components/Custom.js" type="text/javascript" defer></script>
         <title>Very Vilnius | Pilies</title>
     </head>
@@ -11,18 +11,6 @@
         <navbar-component-pc></navbar-component-pc>
         <navbar-component-phone></navbar-component-phone>
         <div class="bod2">
-
-            <script defer>
-                const viewer = new PhotoSphereViewer.Viewer({
-                    navbar: [
-                        'zoom',
-                        'fullscreen',
-                    ],
-                    container: document.querySelector('#Pilies-viewer'),
-                    panorama: "/Home-img/Pilies-img/Flat/Pilies-HDRI.jpg",
-                });
-            </script>
-            
             <div class="gallery">
                 <div class="picture-static" style="grid-area: 1 / 1 / 7 / 4; 
                 background-image: url(/Home-img/Pilies-img/Explore/exp-5.png);"></div>
