--- a/info.html
+++ b/info.html
@@ -7,7 +7,7 @@
         <script src="/Components/Custom.js" type="text/javascript" defer></script>
         <title>Very Vilnius</title>
     </head>
-    <body>
+    <body style="height: 9000px;">
         <navbar-component-pc></navbar-component-pc>
         <navbar-component-phone></navbar-component-phone>
         <div class="bod2">
@@ -22,7 +22,7 @@
                     <input type="email" name="adress" id="adress" class="email" placeholder="Your email adress">
                     <input type="text" name="subject" id="subject" class="email" placeholder="Subject">
                     <textarea name="message" id="message" class="email"  placeholder="Message"></textarea>
-                    <input type="submit" name='submit' id="submit" class="email">
+                    <input type="submit" name='submit' id="submit" class="email" inputmode="none">
                 </form>
             </div>
             <div id="street-view-container">
