--- a/Gatves/Stikliu/stikliu.html
+++ b/Gatves/Stikliu/stikliu.html
@@ -4,7 +4,7 @@
     <head>
         <link rel="stylesheet" type="text/css" href="/Style.css" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photo-sphere-viewer@4/dist/photo-sphere-viewer.min.css"/>
-        <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta charset="utf-8" name="viewport"/>
         <script src="/Components/Custom.js" type="text/javascript"></script>
         <script src="https://cdn.jsdelivr.net/npm/three/build/three.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/uevent@2/browser.min.js"></script>
