--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta charset="utf-8" name="viewport"/>
         <link rel="stylesheet" type="text/css" href="/Style.css" />
         <script src="/Components/Custom.js" type="text/javascript" defer></script>
         <title>Very Vilnius</title>
@@ -11,7 +11,7 @@
         <navbar-component-pc></navbar-component-pc>
         <navbar-component-phone></navbar-component-phone>
         <div class="bod2">
-            <h1 id="Title">(Debugging) Your stay in Vilnius</h1>
+            <h1 id="Title">debugging Your stay in Vilnius</h1>
             <div id="locations">
                 <div class="apartment-opt">
                     <img class="thumb-img" src="/Home-img/Pilies.jpg" alt="Stikliu-street"/>
