Routed php email to proper address

--- a/info.html
+++ b/info.html
@@ -7,7 +7,7 @@
         <script src="/Components/Custom.js" type="text/javascript" defer></script>
         <title>Very Vilnius</title>
     </head>
-    <body style="height: 9000px;">
+    <body>
         <navbar-component-pc></navbar-component-pc>
         <navbar-component-phone></navbar-component-phone>
         <div class="bod2">
