Split parking pages

--- a/Gatves/Pilies/Directions/Parking/pilies-directions-en.html
+++ b/Gatves/Pilies/Directions/Parking/pilies-directions-en.html
@@ -10,42 +10,11 @@
     <body>
         <navbar-component-pc></navbar-component-pc>
         <navbar-component-phone></navbar-component-phone>
-        <language-select src="/Gatves/Pilies/Directions/pilies-directions-en.html"></language-select>
+        <language-select src="/Gatves/Pilies/Directions/Parking/pilies-directions-en.html"></language-select>
         <div>
             <div class="dir-container">
-                <a href="#No-parking" class="dir-title-link">Directions</a>
-                <a href="#With-parking" class="dir-title-link">With parking</a>
-                <div class="directions" id="No-parking">
-                    <h1 class="dir-title">Directions</h1>
-
-                    <div class="step">
-                        <h1>Location</h1>
-                        <div class="instruction-text">
-                            <p>The address is <mark>Pilies str. 38</mark>, Vilnius. The entry is through a gateway.</p>
-                        </div>
-                        <div class="image" id="p-d-1"></div>
-                    </div>
-
-                    <div class="step">
-                        <h1>Obtaining the keys</h1>
-                        <div class="instruction-text">
-                            <p>When You walk up to the postboxes, You will see a keybox on your right. Open the upper keybox with a code you received through SMS. <mark>When You have taken the keys from the keybox, close it and dial a random combination, do not leave it unlocked.</mark></p>
-                        </div>
-                        <div class="image" id="p-d-2"></div>
-                    </div>
-
-                    <div class="step">
-                        <h1>Entering the apartment</h1>
-                        <div class="instruction-text">
-                            <p>Now you can proceed to the brown door and unlock it. When you have climed up the stairs, you will see a walkway, in the end of which there will be a white door with a <mark>number 23</mark> on it, which is the apartment.</p>
-                        </div>
-                        <div class="image" id="p-d-4"></div>
-                    </div>
-                </div>
-
-
                 <div class="directions" id="With-parking">
-                    <h1 class="dir-title">With parking</h1>
+                    <h1 class="dir-title">Directions with parking</h1>
 
                     <div class="step">
                         <h1>Entering the courtyard</h1>
