--- a/Gatves/Pilies/Directions/Parking/pilies-directions-lt.html
+++ b/Gatves/Pilies/Directions/Parking/pilies-directions-lt.html
@@ -10,42 +10,11 @@
     <body>
         <navbar-component-pc></navbar-component-pc>
         <navbar-component-phone></navbar-component-phone>
-        <language-select src="/Gatves/Pilies/Directions/pilies-directions-en.html"></language-select>
+        <language-select src="/Gatves/Pilies/Directions/Parking/pilies-directions-en.html"></language-select>
         <div>
             <div class="dir-container">
-                <a href="#No-parking" class="dir-title-link">Nurodymai</a>
-                <a href="#With-parking" class="dir-title-link">Su parkavimu</a>
-                <div class="directions" id="No-parking">
-                    <h1 class="dir-title">Nurodymai</h1>
-
-                    <div class="step">
-                        <h1>Vieta</h1>
-                        <div class="instruction-text">
-                            <p>Adresas yra <mark>Pilies g. 38</mark>, Vilnius. Įėjimas pro vartus.</p>
-                        </div>
-                        <div class="image" id="p-d-1"></div>
-                    </div>
-
-                    <div class="step">
-                        <h1>Raktų gavimas</h1>
-                        <div class="instruction-text">
-                            <p>Kai prieisite prie pašto dėžučių, dešinėje pamatysite pilką raktų dėžutę, atidarykite ją su žinute gautu kodu.<mark> Iš dežutės raktus pasiėmus ją uždarykite ir įveskite atsitiktinę skaičių kombinaciją, nepalikte jos atidarytos.</mark>Dabar galite atidaryti rudas duris ir užlipti laiptais.</p>
-                        </div>
-                        <div class="image" id="p-d-2"></div>
-                    </div>
-
-                    <div class="step">
-                        <h1>Įėjimas į apartamentą</h1>
-                        <div class="instruction-text">
-                            <p>Užlipus laiptais pamatysite taką su turėklais, kurio pabaigoje rasite baltas apartamento duris su <mark>nr. 23.</mark></p>
-                        </div>
-                        <div class="image" id="p-d-4"></div>
-                    </div>
-                </div>
-
-
-                <div class="directions" id="With-parking">
-                    <h1 class="dir-title">Su parkavimu</h1>
+                <div class="directions">
+                    <h1 class="dir-title">Nurodymai su parkavimu</h1>
 
                     <div class="step">
                         <h1>Įvažiavimas į kiemą</h1>
