--- a/Gatves/Pilies/Directions/Parking/pilies-directions-ru.html
+++ b/Gatves/Pilies/Directions/Parking/pilies-directions-ru.html
@@ -10,42 +10,11 @@
     <body>
         <navbar-component-pc></navbar-component-pc>
         <navbar-component-phone></navbar-component-phone>
-        <language-select src="/Gatves/Pilies/Directions/pilies-directions-en.html"></language-select>
+        <language-select src="/Gatves/Pilies/Directions/Parking/pilies-directions-en.html"></language-select>
         <div>
             <div class="dir-container">
-                <a href="#No-parking" class="dir-title-link">Направления</a>
-                <a href="#With-parking" class="dir-title-link">С парковкой</a>
-                <div class="directions" id="No-parking">
-                    <h1 class="dir-title">Направления</h1>
-
-                    <div class="step">
-                        <h1>Расположение</h1>
-                        <div class="instruction-text">
-                            <p>Точный адрес - <mark>ул. Pilies, дом 38</mark>, город Vilnius. Пожалуйсто войдите во дворик.</p>
-                        </div>
-                        <div class="image" id="p-d-1"></div>
-                    </div>
-
-                    <div class="step">
-                        <h1>получение ключей</h1>
-                        <div class="instruction-text">
-                            <p>Ключи найдёте в кодовом ящичке на правой <mark>Когда возмёте ключи из кодового ящичка, пожалуйсто закройте ящичек и прокрутите любую комбинацию цифр, неоставьте ящичек незакрытым.</mark> Вход в здание - коричневая дверь.</p>
-                        </div>
-                        <div class="image" id="p-d-2"></div>
-                    </div>
-
-                    <div class="step">
-                        <h1>Вход в квартиру</h1>
-                        <div class="instruction-text">
-                            <p>Когда войдёте в коридор, кортокая лестница и апартамент с <mark>номером 23</mark> (белая дверь на правой стороне)</p>
-                        </div>
-                        <div class="image" id="p-d-4"></div>
-                    </div>
-                </div>
-
-
-                <div class="directions" id="With-parking">
-                    <h1 class="dir-title">С парковкой</h1>
+                <div class="directions">
+                    <h1 class="dir-title">Направления с парковкой</h1>
 
                     <div class="step">
                         <h1>Вход во двор</h1>
