--- a/Gatves/Stikliu/Directions/Parking/stikliu-directions-ru.html
+++ b/Gatves/Stikliu/Directions/Parking/stikliu-directions-ru.html
@@ -10,41 +10,11 @@
     <body>
         <navbar-component-pc></navbar-component-pc>
         <navbar-component-phone></navbar-component-phone>
-        <language-select src="/Gatves/Stikliu/Directions/stikliu-directions-en.html"></language-select>
+        <language-select src="/Gatves/Stikliu/Directions/Parking/stikliu-directions-en.html"></language-select>
         <div>
             <div class="dir-container">
-                <a href="#No-parking" class="dir-title-link">Направления</a>
-                <a href="#With-parking" class="dir-title-link">С парковкой</a>
-                <div class="directions" id="No-parking">
-                    <h1 class="dir-title">Направления</h1>
-
-                    <div class="step">
-                        <h1>Расположение</h1>
-                        <div class="instruction-text">
-                            <p>Точный адрес - <mark>Gaono 10, квартира 2</mark></p>
-                        </div>
-                        <div class="image" id="s-d-1"></div>
-                    </div>
-
-                    <div class="step">
-                        <h1>получение ключей</h1>
-                        <div class="instruction-text">
-                            <p>Зайдите во двор (см. фото), там на правой стороне найдете коробку с ключами <mark>Когда возмёте ключи из кодового ящичка, пожалуйсто закройте ящичек и прокрутите любую комбинацию цифр, неоставьте ящичек незакрытым.</mark></p>
-                        </div>
-                        <div class="image" id="s-d-2"></div>
-                    </div>
-
-                    <div class="step">
-                        <h1>Вход в квартиру</h1>
-                        <div class="instruction-text">
-                            <p>Введите код из полученого SMS, зайдите в здание, квартира <mark>номер 2</mark> будет на <mark>правой</mark> стороне.</p>
-                        </div>
-                        <div class="image" id="s-d-4"></div>
-                    </div>
-                </div>
-
-                <div class="directions" id="With-parking">
-                    <h1 class="dir-title">С парковкой</h1>
+                <div class="directions">
+                    <h1 class="dir-title">Направления с парковкой</h1>
 
                     <div class="step">
                         <h1>Парковка автомобиля</h1>
