--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <navbar-component-pc></navbar-component-pc>
         <navbar-component-phone></navbar-component-phone>
         <div class="bod2">
-            <h1 id="Title">debugging Your stay in Vilnius</h1>
+            <h1 id="Title">Your stay in Vilnius</h1>
             <div id="locations">
                 <div class="apartment-opt">
                     <img class="thumb-img" src="/Home-img/Pilies.jpg" alt="Stikliu-street"/>
