--- a/Gatves/Stikliu/Directions/Parking/stikliu-directions-en.html
+++ b/Gatves/Stikliu/Directions/Parking/stikliu-directions-en.html
@@ -10,48 +10,11 @@
     <body>
         <navbar-component-pc></navbar-component-pc>
         <navbar-component-phone></navbar-component-phone>
-        <language-select src="/Gatves/Stikliu/Directions/stikliu-directions-en.html"></language-select>
+        <language-select src="/Gatves/Stikliu/Directions/Parking/stikliu-directions-en.html"></language-select>
         <div>
             <div class="dir-container">
-                <a href="#No-parking" class="dir-title-link">Directions</a>
-                <a href="#With-parking" class="dir-title-link">With parking</a>
-                <div class="directions" id="No-parking">
-                    <h1 class="dir-title">Directions</h1>
-                    <div class="step">
-                        <h1>Location</h1>
-                        <div class="instruction-text">
-                            <p>The address is <mark>Gaono str. 10</mark>, Vilnius. The entry is through a gateway.</p>
-                        </div>
-                        <div class="image" id="s-d-1"></div>
-                    </div>
-
-                    <div class="step">
-                        <h1>Obtaining the keys</h1>
-                        <div class="instruction-text">
-                            <p>When You go through the gate, You will see a keybox on your right. Open the keybox with a code you received through SMS. <mark>When You have taken the keys from the keybox, close it and dial a random combination, do not leave it unlocked.</mark></p>
-                        </div>
-                        <div class="image" id="s-d-2"></div>
-                    </div>
-
-                    <div class="step">
-                        <h1>Going inside</h1>
-                        <div class="instruction-text">
-                            <p>Now you can go to the brown door and unlock it, turn <mark>right</mark> and climb up the stairs.</p>
-                        </div>
-                        <div class="image" id="s-d-3"></div>
-                    </div>
-
-                    <div class="step">
-                        <h1>Entering the apartment</h1>
-                        <div class="instruction-text">
-                            <p>When you have entered the building and climed up the stairs, the door with a <mark>number 2</mark> on it will be the apartment. </p>
-                        </div>
-                        <div class="image" id="s-d-4"></div>
-                    </div>
-                </div>
-
-                <div class="directions" id="With-parking">
-                    <h1 class="dir-title">With parking</h1>
+                <div class="directions">
+                    <h1 class="dir-title">Directions with parking</h1>
 
                     <div class="step">
                         <h1>Parking the car</h1>
