--- a/Gatves/Pilies/pilies-explore.html
+++ b/Gatves/Pilies/pilies-explore.html
@@ -31,7 +31,7 @@
                     <br/>                
                     In the apartment You will find carefully renovated authentic historic decorations, bearing their stories from the 18th century. The house in Pilies street was built in the first half of 16th century and during the ages it was variuos renovations, however, most authentic details are preserved. Here one of the first printing shops, also one of the first bookstores in Vilnius was established by merchant Sava Syrkin. Photographer Icik Chonovich had his photostudio in the building from 1871 to 1887.
                     <br/>
-                    Between 1917 and 1918 the Lithuanian Council held its sittings in the <a href="https://en.wikipedia.org/wiki/House_of_the_Signatories">House of Signatories</a> (50 meters down Pilies street) and the Act of Independence of Lithuania was signed here on 16th of February 1918.
+                    Between 1917 and 1918 the Lithuanian Council held its sittings in the <a href="https://en.wikipedia.org/wiki/House_of_the_Signatories" target="_blank">House of Signatories</a> (50 meters down Pilies street) and the Act of Independence of Lithuania was signed here on 16th of February 1918.
                 </div>
     
                 
