--- a/Gatves/Vilniaus/vilniaus-explore.html
+++ b/Gatves/Vilniaus/vilniaus-explore.html
@@ -44,7 +44,7 @@
                 </div>
     
                 <div class="text-area" style="grid-area: 8 / 7 / 10 / 12;">
-                    Vilnius street has rich a history. One of finest and most renowned violinists in the world <a href="https://en.wikipedia.org/wiki/Jascha_Heifetz">Jascha Heifetz</a> started his musical school exactly in the same building as our apartment. <a href="https://en.wikipedia.org/wiki/Jonas_Basanavičius">Jonas Basanavičius</a>, a key figure in Lithuanian statehood, can also be found mentioned with this building.
+                    Vilnius street has rich a history. One of finest and most renowned violinists in the world <a href="https://en.wikipedia.org/wiki/Jascha_Heifetz" target="_blank">Jascha Heifetz</a> started his musical school exactly in the same building as our apartment. <a href="https://en.wikipedia.org/wiki/Jonas_Basanavičius" target="_blank">Jonas Basanavičius</a>, a key figure in Lithuanian statehood, can also be found mentioned with this building.
                 </div>
     
                 <div class="picture-static" style="grid-area: 10 / 7 / 12 / 12;
