Fixed russian language bugs

--- a/Gatves/Stikliu/Directions/Parking/stikliu-directions-ru.html
+++ b/Gatves/Stikliu/Directions/Parking/stikliu-directions-ru.html
@@ -27,7 +27,7 @@
                     <div class="step">
                         <h1>Открытие ворот</h1>
                         <div class="instruction-text">
-                            <p>У ворот увидите кодовую коробку для ключей. Наберите код, присланый вам по SMS. Открыв коробку, наидёте пульт управления воротами. Нажмите кнопку "C" для открытия ворот. Машину можно парковать в любом месте по намеченным линиям.</mark> Когда возмёте ключи из кодового ящичка, пожалуйсто закройте ящичек и прокрутите любую комбинацию цифр, неоставьте ящичек незакрытым.</p>
+                            <p>У ворот увидите кодовую коробку для ключей. Наберите код, присланый вам по SMS. Открыв коробку, наидёте пульт управления воротами. <mark> Нажмите кнопку "C" для открытия ворот.</mark> Машину можно парковать в любом месте по намеченным линиям.Когда возмёте ключи из кодового ящичка, пожалуйсто закройте ящичек и прокрутите любую комбинацию цифр, неоставьте ящичек незакрытым.</p>
                         </div>
                         <div class="image" id="p-d-6"></div>
                     </div>
