--- a/Gatves/Pilies/Directions/Parking/pilies-directions-ru.html
+++ b/Gatves/Pilies/Directions/Parking/pilies-directions-ru.html
@@ -27,8 +27,11 @@
                     <div class="step">
                         <h1>Открытие ворот</h1>
                         <div class="instruction-text">
-                            <p>Near the gate on your left there is a keybox on the wall. When you have dialed the code which you received, a box will open and you will find a remote for the gate.<mark> Push the button "C" to open the gate.</mark><br/>
-                            When You have taken the keys from the keybox, close it and dial a random combination, do not leave it unlocked. Then, when You have parked your car, go on top of the incline, then turn to Your left and go through an arch.</p>
+                            <p>У ворот увидите кодовую коробку для ключей. Наберите код, присланый вам по SMS. Открыв коробку, наидёте пульт управления
+                            воротами. <mark> Нажмите кнопку "C" для открытия ворот.</mark><br/>
+                            Машину можно парковать в любом месте по намеченным
+                            линиям.Когда возмёте ключи из кодового ящичка, пожалуйсто закройте ящичек и прокрутите любую комбинацию цифр, неоставьте
+                            ящичек незакрытым. Когда Вы припарковали свой автомобиль, поднимитесь на вершину склона, затем поверните налево и пройдите через арку.</p>
                         </div>
                         <div class="image" id="p-d-6"></div>
                     </div>
