Small fixes, added vilnius

--- a/Gatves/Stikliu/Directions/No-parking/stikliu-directions-ru.html
+++ b/Gatves/Stikliu/Directions/No-parking/stikliu-directions-ru.html
@@ -1,46 +1,64 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <link rel="stylesheet" type="text/css" href="/Style.css" />
-        <meta charset="utf-8" />
-        <script src="/Components/Custom.js" type="text/javascript" defer></script>
-        <title>Very Vilnius | Stikliu</title>
-    </head>
-    <body>
-        <navbar-component-pc></navbar-component-pc>
-        <navbar-component-phone></navbar-component-phone>
-        <language-select src="/Gatves/Stikliu/Directions/No-parking/stikliu-directions-en.html"></language-select>
-        <div>
-            <div class="dir-container">
-                <div class="directions">
-                    <h1 class="dir-title">Направления</h1>
+	<head>
+		<link rel="stylesheet" type="text/css" href="/Style.css" />
+		<meta charset="utf-8" />
+		<script src="/Components/Custom.js" type="text/javascript" defer></script>
+		<title>Very Vilnius | Stikliu</title>
+	</head>
+	<body>
+		<navbar-component-pc></navbar-component-pc>
+		<navbar-component-phone></navbar-component-phone>
+		<language-select
+			src="/Gatves/Stikliu/Directions/No-parking/stikliu-directions-en.html"
+		></language-select>
+		<div>
+			<div class="dir-container">
+				<div class="directions">
+					<h1 class="dir-title">Направления</h1>
 
-                    <div class="step">
-                        <h1>Расположение</h1>
-                        <div class="instruction-text">
-                            <p>Точный адрес - <mark>Gaono 10, квартира 2</mark></p>
-                        </div>
-                        <div class="image" id="s-d-1"></div>
-                    </div>
+					<div class="step">
+						<h1>Расположение</h1>
+						<div class="instruction-text">
+							<p>Точный адрес - <mark>Gaono 10, квартира 2</mark></p>
+						</div>
+						<div class="image" id="s-d-1"></div>
+					</div>
 
-                    <div class="step">
-                        <h1>получение ключей</h1>
-                        <div class="instruction-text">
-                            <p>Зайдите во двор (см. фото), там на правой стороне найдете коробку с ключами <mark>Когда возмёте ключи из кодового ящичка, пожалуйсто закройте ящичек и прокрутите любую комбинацию цифр, неоставьте ящичек незакрытым.</mark></p>
-                        </div>
-                        <div class="image" id="s-d-2"></div>
-                    </div>
+					<div class="step">
+						<h1>получение ключей</h1>
+						<div class="instruction-text">
+							<p>
+								Зайдите во двор (см. фото), там на правой стороне найдете коробку с
+								ключами
+								<mark
+									>Когда возмёте ключи из кодового ящичка, пожалуйсто закройте ящичек и
+									прокрутите любую комбинацию цифр, неоставьте ящичек незакрытым.</mark
+								>
+							</p>
+						</div>
+						<div class="image" id="s-d-2"></div>
+					</div>
 
-                    <div class="step">
-                        <h1>Вход в квартиру</h1>
-                        <div class="instruction-text">
-                            <p>Введите код из полученого SMS, зайдите в здание, квартира <mark>номер 2</mark> будет на <mark>правой</mark> стороне.</p>
-                        </div>
-                        <div class="image" id="s-d-4"></div>
-                    </div>
-                </div>                
-            </div>
-        </div>
-    </body>
+					<div class="step">
+						<h1>Вход в квартиру</h1>
+						<div class="instruction-text">
+							<p>
+								Введите код из полученого SMS, зайдите в здание, квартира
+								<mark>номер 2</mark> будет на <mark>правой</mark> стороне.
+							</p>
+						</div>
+						<div class="image" id="s-d-3"></div>
+					</div>
+					<div class="step">
+						<div class="instruction-text">
+							<p>⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀</p>
+						</div>
+						<div class="image" id="s-d-4"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
