--- a/Gatves/Vilniaus/Directions/No-parking/vilniaus-directions-en.html
+++ b/Gatves/Vilniaus/Directions/No-parking/vilniaus-directions-en.html
@@ -16,19 +16,30 @@
 		<div>
 			<div class="dir-container">
 				<div class="directions">
-					<h1 class="dir-title">Directions with parking</h1>
+					<h1 class="dir-title">Directions</h1>
 
 					<div class="step">
-						<h1>Parking the car</h1>
+						<h1>Obtaining the keys</h1>
 						<div class="instruction-text">
-							<p>
-								The entry for cars to the courtyard is from another street -
-								<mark>Latako str. 2.</mark> This is a narrow one-way street, so do not
-								hurry and make a right turn after You pass the yellow building. Here You
-								will see the gate to the courtyard parking area.
-							</p>
+							<p></p>
 						</div>
 						<div class="image" id="v-d-1"></div>
+					</div>
+
+					<div class="step">
+						<h1></h1>
+						<div class="instruction-text">
+							<p></p>
+						</div>
+						<div class="image" id="v-d-2"></div>
+					</div>
+
+					<div class="step">
+						<h1></h1>
+						<div class="instruction-text">
+							<p></p>
+						</div>
+						<div class="image" id="v-d-3"></div>
 					</div>
 				</div>
 			</div>
