--- a/Gatves/Stikliu/Directions/Parking/stikliu-directions-en.html
+++ b/Gatves/Stikliu/Directions/Parking/stikliu-directions-en.html
@@ -1,70 +1,100 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <link rel="stylesheet" type="text/css" href="/Style.css" />
-        <meta charset="utf-8" />
-        <script src="/Components/Custom.js" type="text/javascript" defer></script>
-        <title>Very Vilnius | Stikliu</title>
-    </head>
-    <body>
-        <navbar-component-pc></navbar-component-pc>
-        <navbar-component-phone></navbar-component-phone>
-        <language-select src="/Gatves/Stikliu/Directions/Parking/stikliu-directions-en.html"></language-select>
-        <div>
-            <div class="dir-container">
-                <div class="directions">
-                    <h1 class="dir-title">Directions with parking</h1>
+	<head>
+		<link rel="stylesheet" type="text/css" href="/Style.css" />
+		<meta charset="utf-8" />
+		<script src="/Components/Custom.js" type="text/javascript" defer></script>
+		<title>Very Vilnius | Stikliu</title>
+	</head>
+	<body>
+		<navbar-component-pc></navbar-component-pc>
+		<navbar-component-phone></navbar-component-phone>
+		<language-select
+			src="/Gatves/Stikliu/Directions/Parking/stikliu-directions-en.html"
+		></language-select>
+		<div>
+			<div class="dir-container">
+				<div class="directions">
+					<h1 class="dir-title">Directions with parking</h1>
 
-                    <div class="step">
-                        <h1>Parking the car</h1>
-                        <div class="instruction-text">
-                            <p>The entry for cars to the courtyard is from another street - <mark>Latako str. 2.</mark> This is a narrow one-way street, so do not hurry and make a right turn after You pass the yellow building. Here You will see the gate to the courtyard parking area.</p>
-                        </div>
-                        <div class="image" id="p-d-5"></div>
-                    </div>
+					<div class="step">
+						<h1>Parking the car</h1>
+						<div class="instruction-text">
+							<p>
+								The entry for cars to the courtyard is from another street -
+								<mark>Latako str. 2.</mark> This is a narrow one-way street, so do not
+								hurry and make a right turn after You pass the yellow building. Here You
+								will see the gate to the courtyard parking area.
+							</p>
+						</div>
+						<div class="image" id="p-d-5"></div>
+					</div>
 
-                    <div class="step">
-                        <h1>Opening the gate</h1>
-                        <div class="instruction-text">
-                            <p>Near the gate on your left there is a keybox on the wall. When you have dialed the code which you received, a box will open and you will find a remote for the gate.<mark> Push the button "C" to open the gate.</mark> When You have taken the keys from the keybox, close it and dial a random combination, do not leave it unlocked.</p>
-                        </div>
-                        <div class="image" id="p-d-6"></div>
-                    </div>
+					<div class="step">
+						<h1>Opening the gate</h1>
+						<div class="instruction-text">
+							<p>
+								Near the gate on your left there is a keybox on the wall. When you have
+								dialed the code which you received, a box will open and you will find a
+								remote for the gate.<mark> Push the button "C" to open the gate.</mark>
+								When You have taken the keys from the keybox, close it and dial a random
+								combination, do not leave it unlocked.
+							</p>
+						</div>
+						<div class="image" id="p-d-6"></div>
+					</div>
 
-                    <div class="step">
-                        <h1>Entering the courtyard</h1>
-                        <div class="instruction-text">
-                            <p>When you have parked your car return to Latako str., go up the hill and through the park to <mark>Gaono str. 10.</mark> how it is shown in the map.</p>
-                        </div>
-                        <div class="image" id="s-d-5"></div>
-                    </div>
-                    
-                    <div class="step">
-                        <h1>Obtaining the keys</h1>
-                        <div class="instruction-text">
-                            <p>When You go through the gate, You will see a keybox on your right. Open the keybox with a code you received through SMS. <mark>When You have taken the keys from the keybox, close it and dial a random combination, do not leave it unlocked.</mark></p>
-                        </div>
-                        <div class="image" id="s-d-2"></div>
-                    </div>
+					<div class="step">
+						<h1>Entering the courtyard</h1>
+						<div class="instruction-text">
+							<p>
+								When you have parked your car return to Latako str., go up the hill and
+								through the park to <mark>Gaono str. 10.</mark> how it is shown in the
+								map.
+							</p>
+						</div>
+						<div class="image" id="s-d-5"></div>
+					</div>
 
-                    <div class="step">
-                        <h1>Going inside</h1>
-                        <div class="instruction-text">
-                            <p>Now you can go to the brown door and unlock it, turn <mark>right</mark> and climb up the stairs.</p>
-                        </div>
-                        <div class="image" id="s-d-3"></div>
-                    </div>
+					<div class="step">
+						<h1>Obtaining the keys</h1>
+						<div class="instruction-text">
+							<p>
+								When You go through the gate, You will see a keybox on your right. Open
+								the keybox with a code you received through SMS.
+								<mark
+									>When You have taken the keys from the keybox, close it and dial a
+									random combination, do not leave it unlocked.</mark
+								>
+							</p>
+						</div>
+						<div class="image" id="s-d-2"></div>
+					</div>
 
-                    <div class="step">
-                        <h1>Entering the apartment</h1>
-                        <div class="instruction-text">
-                            <p>When you have climbed up the stairs, the door with a <mark>number 2</mark> on it will be the apartment. </p>
-                        </div>
-                        <div class="image" id="s-d-4"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </body>
+					<div class="step">
+						<h1>Going inside</h1>
+						<div class="instruction-text">
+							<p>
+								Now you can go to the brown door and unlock it, turn
+								<mark>right</mark> and climb up the stairs.
+							</p>
+						</div>
+						<div class="image" id="s-d-3"></div>
+					</div>
+
+					<div class="step">
+						<h1>Entering the apartment</h1>
+						<div class="instruction-text">
+							<p>
+								When you have climbed up the stairs, the door with a
+								<mark>number 2</mark> on it will be the apartment.
+							</p>
+						</div>
+						<div class="image" id="s-d-4"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
