--- a/Gatves/Stikliu/Directions/No-parking/stikliu-directions-ru.html
+++ b/Gatves/Stikliu/Directions/No-parking/stikliu-directions-ru.html
@@ -53,6 +53,7 @@
 					</div>
 					<div class="step">
 						<div class="instruction-text">
+							<!-- Prevents image from collapsing to 0 width (Add grid sistem for side pictures if necessary) -->
 							<p>⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀</p>
 						</div>
 						<div class="image" id="s-d-4"></div>
