Adressed minor display bugs

--- a/Gatves/Vilniaus/Directions/No-parking/vilniaus-directions-en.html
+++ b/Gatves/Vilniaus/Directions/No-parking/vilniaus-directions-en.html
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 		<link rel="stylesheet" type="text/css" href="/Style.css" />
-		<meta charset="utf-8" />
+		<meta charset="utf-8" content="width=device-width, initial-scale=1.0" />
 		<script src="/Components/Custom.js" type="text/javascript" defer></script>
 		<title>Very Vilnius | Vilniaus</title>
 	</head>
