--- a/Gatves/Pilies/pilies-explore.html
+++ b/Gatves/Pilies/pilies-explore.html
@@ -3,7 +3,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="/Style.css" />
-        <meta charset="utf-8" name="viewport"/>
+        <meta charset="utf-8" nname="viewport" content="width=device-width, initial-scale=1.0"/>
         <script src="/Components/Custom.js" type="text/javascript" defer></script>
         <title>Very Vilnius | Pilies</title>
     </head>
