--- a/Gatves/Stikliu/Directions/No-parking/stikliu-directions-ru.html
+++ b/Gatves/Stikliu/Directions/No-parking/stikliu-directions-ru.html
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 		<link rel="stylesheet" type="text/css" href="/Style.css" />
-		<meta charset="utf-8" />
+		<meta charset="utf-8" content="width=device-width, initial-scale=1.0"/>
 		<script src="/Components/Custom.js" type="text/javascript" defer></script>
 		<title>Very Vilnius | Stikliu</title>
 	</head>
@@ -54,7 +54,7 @@
 					<div class="step">
 						<div class="instruction-text">
 							<!-- Prevents image from collapsing to 0 width (Add grid sistem for side pictures if necessary) -->
-							<p>⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀</p>
+							<p class="inv_cont">-------------------------------------------------------------------------</p>
 						</div>
 						<div class="image" id="s-d-4"></div>
 					</div>
