--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
     <head>
-        <meta charset="utf-8" name="viewport"/>
+        <meta charset="utf-8" nname="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" type="text/css" href="/Style.css" />
         <script src="/Components/Custom.js" type="text/javascript" defer></script>
         <title>Very Vilnius</title>
