Added Vilnius instructions

--- a/Gatves/Pilies/Directions/No-parking/pilies-directions-ru.html
+++ b/Gatves/Pilies/Directions/No-parking/pilies-directions-ru.html
@@ -27,7 +27,7 @@
                     <div class="step">
                         <h1>получение ключей</h1>
                         <div class="instruction-text">
-                            <p>Ключи найдёте в кодовом ящичке на правой <mark>Когда возмёте ключи из кодового ящичка, пожалуйсто закройте ящичек и прокрутите любую комбинацию цифр, неоставьте ящичек незакрытым.</mark> Вход в здание - коричневая дверь.</p>
+                            <p>Ключи найдёте в кодовом ящичке на правой <mark>Введите код который получите и взяв ключи прокрутите любые цифры чтобы не остался код.</mark> Вход в здание - коричневая дверь.</p>
                         </div>
                         <div class="image" id="p-d-2"></div>
                     </div>
