--- a/Gatves/Stikliu/Directions/No-parking/stikliu-directions-en.html
+++ b/Gatves/Stikliu/Directions/No-parking/stikliu-directions-en.html
@@ -35,10 +35,8 @@
 							<p>
 								When You go through the gate, You will see a keybox on your right. Open
 								the keybox with a code you received through SMS.
-								<mark
-									>When You have taken the keys from the keybox, close it and dial a
-									random combination, do not leave it unlocked.</mark
-								>
+								<mark>When You have taken the keys from the keybox, close it and dial a
+									random combination, do not leave it unlocked.</mark>
 							</p>
 						</div>
 						<div class="image" id="s-d-2"></div>
