--- a/Gatves/Stikliu/Directions/No-parking/stikliu-directions-ru.html
+++ b/Gatves/Stikliu/Directions/No-parking/stikliu-directions-ru.html
@@ -3,7 +3,7 @@
 <html lang="en">
 	<head>
 		<link rel="stylesheet" type="text/css" href="/Style.css" />
-		<meta charset="utf-8" content="width=device-width, initial-scale=1.0"/>
+		<meta charset="utf-8" content="width=device-width, initial-scale=1.0" />
 		<script src="/Components/Custom.js" type="text/javascript" defer></script>
 		<title>Very Vilnius | Stikliu</title>
 	</head>
@@ -33,8 +33,7 @@
 								Зайдите во двор (см. фото), там на правой стороне найдете коробку с
 								ключами
 								<mark
-									>Когда возмёте ключи из кодового ящичка, пожалуйсто закройте ящичек и
-									прокрутите любую комбинацию цифр, неоставьте ящичек незакрытым.</mark
+									>Введите код который получите и взяв ключи прокрутите любые цифры чтобы не остался код.</mark
 								>
 							</p>
 						</div>
@@ -54,7 +53,9 @@
 					<div class="step">
 						<div class="instruction-text">
 							<!-- Prevents image from collapsing to 0 width (Add grid sistem for side pictures if necessary) -->
-							<p class="inv_cont">-------------------------------------------------------------------------</p>
+							<p class="invcont">
+								a-------------------------------------------------------------------------
+							</p>
 						</div>
 						<div class="image" id="s-d-4"></div>
 					</div>
