--- a/Gatves/Vilniaus/Directions/No-parking/vilniaus-directions-en.html
+++ b/Gatves/Vilniaus/Directions/No-parking/vilniaus-directions-en.html
@@ -11,7 +11,7 @@
 		<navbar-component-pc></navbar-component-pc>
 		<navbar-component-phone></navbar-component-phone>
 		<language-select
-			src="/Gatves/Vilniaus/Directions/Parking/vilniaus-directions-en.html"
+			src="/Gatves/Vilniaus/Directions/No-parking/vilniaus-directions-en.html"
 		></language-select>
 		<div>
 			<div class="dir-container">
@@ -19,9 +19,12 @@
 					<h1 class="dir-title">Directions</h1>
 
 					<div class="step">
-						<h1>Obtaining the keys</h1>
+						<h1></h1>
 						<div class="instruction-text">
-							<p></p>
+							<p>
+								The address is <mark>Vilniaus g. 25</mark>, Vilnius. The entry is
+								through the big grey door.
+							</p>
 						</div>
 						<div class="image" id="v-d-1"></div>
 					</div>
@@ -29,7 +32,19 @@
 					<div class="step">
 						<h1></h1>
 						<div class="instruction-text">
-							<p></p>
+							<p>
+								If your arrival is in the bussiness days until 5 PM, this door will be
+								open. If you will come in the weekend or after 5 PM, please enter the
+								code <u><mark>32*6996</mark></u> on the right side of the door.
+							</p>
+						</div>
+						<div class="image" id="v-d-5"></div>
+					</div>
+
+					<div class="step">
+						<h1></h1>
+						<div class="instruction-text">
+							<p>Go up the stairs.</p>
 						</div>
 						<div class="image" id="v-d-2"></div>
 					</div>
@@ -37,7 +52,33 @@
 					<div class="step">
 						<h1></h1>
 						<div class="instruction-text">
-							<p></p>
+							<p>On the right you will find a keybox on the wall.</p>
+						</div>
+						<div class="image" id="v-d-6"></div>
+					</div>
+
+					<div class="step">
+						<h1></h1>
+						<div class="instruction-text">
+							<p>
+								Enter the code you have received and
+								<mark>
+									when You have taken the keys from the keybox, close it and dial a
+									random combination, do not leave it unlocked.
+								</mark>
+							</p>
+						</div>
+						<div class="image" id="v-d-4"></div>
+					</div>
+
+					<div class="step">
+						<h1></h1>
+						<div class="instruction-text">
+							<p>
+								Enter through the white door and on you right will be the apartment with
+								<mark>No. 32</mark>. <br />With a key there is a tablet that you can
+								also use to open the grey enterance door.
+							</p>
 						</div>
 						<div class="image" id="v-d-3"></div>
 					</div>
