--- a/Gatves/Stikliu/Directions/Parking/stikliu-directions-ru.html
+++ b/Gatves/Stikliu/Directions/Parking/stikliu-directions-ru.html
@@ -43,7 +43,7 @@
                     <div class="step">
                         <h1>получение ключей</h1>
                         <div class="instruction-text">
-                            <p>Зайдите во двор (см. фото), там на правой стороне найдете коробку с ключами <mark>Когда возмёте ключи из кодового ящичка, пожалуйсто закройте ящичек и прокрутите любую комбинацию цифр, неоставьте ящичек незакрытым.</mark></p>
+                            <p>Зайдите во двор (см. фото), там на правой стороне найдете коробку с ключами <mark>Введите код который получите и взяв ключи прокрутите любые цифры чтобы не остался код.</mark></p>
                         </div>
                         <div class="image" id="s-d-2"></div>
                     </div>
