Russian instruction changes

--- a/Gatves/Pilies/Directions/No-parking/pilies-directions-ru.html
+++ b/Gatves/Pilies/Directions/No-parking/pilies-directions-ru.html
@@ -19,7 +19,7 @@
                     <div class="step">
                         <h1>Расположение</h1>
                         <div class="instruction-text">
-                            <p>Точный адрес - <mark>ул. Pilies, дом 38</mark>, город Vilnius. Пожалуйсто войдите во дворик.</p>
+                            <p>Точный адрес - <mark>ул. Pilies, дом 38</mark>, город Vilnius. Пожалуйста войдите во дворик.</p>
                         </div>
                         <div class="image" id="p-d-1"></div>
                     </div>
@@ -27,7 +27,7 @@
                     <div class="step">
                         <h1>получение ключей</h1>
                         <div class="instruction-text">
-                            <p>Ключи найдёте в кодовом ящичке на правой <mark>Введите код который получите и взяв ключи прокрутите любые цифры чтобы не остался код.</mark> Вход в здание - коричневая дверь.</p>
+                            <p>Ключи найдёте в кодовом ящичке на правой стороне. <mark>Введите код который получите и взяв ключи прокрутите любые цифры чтобы не остался код.</mark> Вход в здание - коричневая дверь.</p>
                         </div>
                         <div class="image" id="p-d-2"></div>
                     </div>
@@ -35,7 +35,7 @@
                     <div class="step">
                         <h1>Вход в квартиру</h1>
                         <div class="instruction-text">
-                            <p>Когда войдёте в коридор, кортокая лестница и апартамент с <mark>номером 23</mark> (белая дверь на правой стороне)</p>
+                            <p>Когда войдёте в коридор, поднимитесь по лестнице и апартамент <mark>номер 23</mark> (белая дверь на правой стороне)</p>
                         </div>
                         <div class="image" id="p-d-4"></div>
                     </div>
