--- a/Gatves/Pilies/Directions/Parking/pilies-directions-ru.html
+++ b/Gatves/Pilies/Directions/Parking/pilies-directions-ru.html
@@ -19,7 +19,7 @@
                     <div class="step">
                         <h1>Вход во двор</h1>
                         <div class="instruction-text">
-                            <p>Заезд во дворик с паковкой - из другой улицы: <mark>Latako str. 2.</mark> Это маленкая улица с односторонним движением. Как только проедете желтый дом, на право будет вьезд во двор с воротами</p>
+                            <p>Заезд во дворик с парковкой - из другой улицы: <mark>Latako str. 2.</mark> Это маленкая улица с односторонним движением. Как только проедете желтый дом, на право будет вьезд во двор с воротами</p>
                         </div>
                         <div class="image" id="p-d-5"></div>
                     </div>
@@ -27,11 +27,11 @@
                     <div class="step">
                         <h1>Открытие ворот</h1>
                         <div class="instruction-text">
-                            <p>У ворот увидите кодовую коробку для ключей. Наберите код, присланый вам по SMS. Открыв коробку, наидёте пульт управления
-                            воротами. <mark> Нажмите кнопку "C" для открытия ворот.</mark><br/>
+                            <p>У ворот увидите кодовую коробку для ключей на левой стороне. Наберите код, присланый вам. Открыв коробку, наидёте пульт управления
+                            воротами. <mark>Нажмите кнопку "C" для открытия ворот.</mark><br/>
                             Машину можно парковать в любом месте по намеченным
                             линиям.Когда возмёте ключи из кодового ящичка, пожалуйсто закройте ящичек и прокрутите любую комбинацию цифр, неоставьте
-                            ящичек незакрытым. Когда Вы припарковали свой автомобиль, поднимитесь на вершину склона, затем поверните налево и пройдите через арку.</p>
+                            ящичек незакрытым. Когда Вы припарковали свой автомобиль, поднимитесь на горку, затем поверните налево и пройдите через арку.</p>
                         </div>
                         <div class="image" id="p-d-6"></div>
                     </div>
@@ -39,7 +39,7 @@
                     <div class="step">
                         <h1>получение ключей</h1>
                         <div class="instruction-text">
-                            <p>Ключи найдёте в кодовом ящичке на правой <mark>Введите код который получите и взяв ключи прокрутите любые цифры чтобы не остался код.</mark> Вход в здание - коричневая дверь.</p>
+                            <p>Ключи найдёте в кодовом ящичке на левой стороне. <mark>Введите код который получите и взяв ключи прокрутите любые цифры чтобы не остался код.</mark> Вход в здание - коричневая дверь.</p>
                         </div>
                         <div class="image" id="p-d-2"></div>
                     </div>
@@ -47,7 +47,7 @@
                     <div class="step">
                         <h1>Вход в квартиру</h1>
                         <div class="instruction-text">
-                            <p>Когда войдёте в коридор, кортокая лестница и апартамент с <mark>номером 23</mark> (белая дверь на правой стороне)</p>
+                            <p>Когда войдёте в коридор, поднимитесь по лестнице и апартамент <mark>номер 23</mark> (белая дверь на правой стороне)</p>
                         </div>
                         <div class="image" id="p-d-4"></div>
                     </div>
