--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
     <head>
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
         <meta charset="utf-8" nname="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" type="text/css" href="/Style.css" />
         <script src="/Components/Custom.js" type="text/javascript" defer></script>
@@ -36,7 +37,7 @@
                 </div>
             </div>
             <h1 id="subtitle">VERY VILNIUS APARTMENTS</h1>
-            <h1 id="subtitle">V 1.18</h1>
+            <h1 id="subtitle">V 1.19</h1>
         </div>
     </body>
 </html>
